--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #1E293B; /* bg-slate-800 */
+  background-color: #0A4558; /* bg-slate-800 */
   color: white;
   display: flex;
   justify-content: space-between;
